Fix: Font loading on iOS
Ensure fonts load correctly on iOS devices.

--- a/src/index.css
+++ b/src/index.css
@@ -67,12 +67,16 @@
   }
 }
 
+/* Improved font declarations with better iOS support */
 @font-face {
   font-family: 'Lab Grotesque';
   src: url('/fonts/LabGrotesque-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
@@ -81,6 +85,9 @@
   font-weight: 500;
   font-style: normal;
   font-display: swap;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
@@ -89,6 +96,9 @@
   font-weight: 700;
   font-style: normal;
   font-display: swap;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
@@ -97,6 +107,9 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
@@ -105,6 +118,9 @@
   font-weight: 500;
   font-style: normal;
   font-display: swap;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* Add font preloading hints to the HTML */
